Actualizacion portfolio terminado

--- a/perfil.html
+++ b/perfil.html
@@ -38,7 +38,7 @@
 
   <main>
     
-    <section class="profile-main-container">
+    <section class="profile-main-container" id="Home">
       <!-- <div class="blob-container">
 
         <svg viewBox="0 0 800 500" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" id="blobSvg">
@@ -119,7 +119,7 @@
     <div class="border-gradient"></div>
 
     <!-- ########## ABOUT SECTION ########## -->
-    <section class="portfolio-about">
+    <section class="portfolio-about" id="about">
       <div class="portfolio-about--myself">
         <img src="./assets/img/person-about.png" alt="">
         <h2>¿Quien soy?</h2>
@@ -159,13 +159,63 @@
         </div>
       </div>
     </section>
+    <div class="border-gradient"></div>
 
-    <!-- Seccion de contacto -->
+    <!-- ########## WORKS SECTION ########## -->
+    <div class="portfolio-works" id="works">
+      <h1>Works</h1>
+      <div class="works-container">
+
+        <div class="work-card">
+          <div class="work-card--content">
+            <img src="./assets/img/image-not-found.jpg" alt="">
+            <h2>Titulo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus voluptas.</p>
+            <a href="#">Ver proyecto</a>
+          </div>
+        </div>
+        <div class="work-card">
+          <div class="work-card--content">
+            <img src="./assets/img/image-not-found.jpg" alt="">
+            <h2>Titulo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero dolorem accusamus, iste vitae et exercitationem?</p>
+            <a href="#">Ver proyecto</a>
+          </div>
+        </div>
+        <div class="work-card">
+          <div class="work-card--content">
+            <img src="./assets/img/image-not-found.jpg" alt="">
+            <h2>Titulo</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti quos architecto deserunt ipsam aliquid commodi odio fuga eveniet dolore? Nostrum porro, dicta officia reiciendis officiis excepturi deserunt amet tenetur magni autem quam maxime minima voluptatem, perferendis, alias mollitia ipsa animi.</p>
+            <a href="#">Ver proyecto</a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="border-gradient"></div>
+
+    <!-- ########## CONTACT SECTION ########## -->
+    <section class="portfolio-contact" id="contact">
+      <h1>Contactame</h1>
+      <p>Escribeme por cualquiera de los siguientes medios:</p>
+      <div class="portfolio-redes redes-contact">
+        <a href=""> <span><i class='bx bxl-linkedin'></i></span> linkedIn</a>
+        <a href=""> <span><i class='bx bxl-twitter' ></i></span> Twitter</a>
+        <a href=""> <span><i class='bx bxl-gmail' ></i></span> Gmail</a>
+      </div>
+      <p>Sigueme en mis redes sociales:</p>
+      <div class="portfolio-redes redes-contact">
+        <a href=""> <span><i class='bx bxl-instagram'></i></span> Instagram</a>
+        <a href=""> <span><i class='bx bxl-github' ></i></span> Github</a>
+        <a href=""> <span><i class='bx bxl-behance' ></i></span> Behance</a>
+      </div>
+    </section>
     
   </main>
 
   <footer>
-    <p>Creado por Marco Agüero. 2022</p>
+    <p>© 2022 Marco Agüero</p>
   </footer>
 </body>
 </html>
